--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>particles.js</title>
+  <title>Saj.B=Great_Dev</title>
   <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
   <meta name="author" content="Vincent Garreau" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -11,12 +11,14 @@
 <body>
 
 <!-- count particles -->
-<div class="count-particles">
+<!-- <div class="count-particles">
   <span class="js-count-particles">--</span> particles
-</div>
+</div> -->
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
+
+<h1>Hi and welcome to my profile page!</h1>
 
 <!-- scripts -->
 <script src="../particles.js"></script>
@@ -24,7 +26,7 @@
 
 <!-- stats.js -->
 <script src="js/lib/stats.js"></script>
-<script>
+<!-- <script>
   var count_particles, stats, update;
   stats = new Stats;
   stats.setMode(0);
@@ -42,7 +44,7 @@
     requestAnimationFrame(update);
   };
   requestAnimationFrame(update);
-</script>
+</script> -->
 
 </body>
 </html>
