added basic header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
 </div> -->
 
 <!-- particles.js container -->
-<div id="particles-js"></div>
+<div id="particles-js">
 
 <h1>Hi and welcome to my profile page!</h1>
+
+
+
+
+</div>
+
 
 <!-- scripts -->
 <script src="../particles.js"></script>
