added basic header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!-- particles.js container -->
 <div id="particles-js">
 
-<h1>Hi and welcome to my profile page!</h1>
 
+<h1 class="main-div">Hi and welcome to my profile page!</h1>
 
 
 
@@ -31,7 +31,7 @@
 <script src="js/app.js"></script>
 
 <!-- stats.js -->
-<script src="js/lib/stats.js"></script>
+<!-- <script src="js/lib/stats.js"></script> -->
 <!-- <script>
   var count_particles, stats, update;
   stats = new Stats;
