--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+
   <title>Saj.B=Great_Dev</title>
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
   <link rel="stylesheet" media="screen" href="css/style.css">
+
 </head>
 
 <body>
