--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
 
   <title>Saj.B=Great_Dev</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <link rel="stylesheet" media="screen" href="css/style.css">
-
 </head>
 
 <body>
 
-<p> Hi! I'm a junior web developer :) </p>
+  <p> Hi! I'm a junior web developer :) </p>
 
 
 </body>
