added some content

--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
 
   <title>Saj.B=Great_Dev</title>
 
+  <link href="/images/Sb.ico" rel="icon" type="image/x-icon">
+
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
 
-  <p> Hi! I'm a junior web developer :) </p>
+  <h4>Welcome to my page :)</h4>
 
+  <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area </p>
+
+  <p> I hold a degree in Electrical Engineering from Carleton University and a diploma in Web Development from Lighthouse Labs. I am passionate about all things web-related and enjoy analyzing problems for logical solutions. I am also a <b>strong</b> believer in the continous learning paradigm: the new labour market demands professionals who are continously acquiring new skills and abilities by means of self education. </p>
+
+  <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
+
+  <div class="pic-container">
+    <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img src="images/jungle.png"> </a>
+  </div>
+
+  <div class="pic-container">
+    <a href="https://github.com/Sanju3001/tweetr" target="_blank">  <img src="images/tweeter.png"> </a>
+  </div>
+
+  <div class="pic-container">
+    <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img src="images/chatty.png"> </a>
+  </div>
+
+  <div class="pic-container">
+    <a href="https://github.com/Sanju3001/resource_wall" target="_blank">  <img src="images/resource-wall.png"> </a>
+  </div>
 
 </body>
 
