added some content

--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
 
   <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
 
-  <div class="pic-container">
-    <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img src="images/jungle.png"> </a>
+  <div>
+    <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img class="pic-container" src="images/jungle.png"> </a>
   </div>
 
-  <div class="pic-container">
-    <a href="https://github.com/Sanju3001/tweetr" target="_blank">  <img src="images/tweeter.png"> </a>
+  <div>
+    <a href="https://github.com/Sanju3001/tweetr" target="_blank">  <img class="pic-container" src="images/tweeter.png"> </a>
   </div>
 
-  <div class="pic-container">
-    <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img src="images/chatty.png"> </a>
+  <div>
+    <a href="https://github.com/Sanju3001/resource_wall" target="_blank">  <img class="pic-container" src="images/resource-wall.png"> </a>
   </div>
 
-  <div class="pic-container">
-    <a href="https://github.com/Sanju3001/resource_wall" target="_blank">  <img src="images/resource-wall.png"> </a>
+  <div>
+    <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img class="pic-container" src="images/chatty.png"> </a>
   </div>
+
+
 
 </body>
 
