--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 
   <title>Saj.B=Great_Dev</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta description content>
+
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
   <link href="/images/Sb.ico" rel="icon" type="image/x-icon">
 
   <link href="css/style.css" rel="stylesheet">
@@ -13,7 +19,17 @@
 
 <body>
 
-  <h4>Welcome to my page :)</h4>
+<div class="wrapper">
+
+  <header class="main-head">Saj Bandara</header>
+
+  <nav class="main-nav">
+    <ul>
+        <li><a href="">Nav 1</a></li>
+        <li><a href="">Nav 2</a></li>
+        <li><a href="">Nav 3</a></li>
+    </ul>
+  </nav>
 
   <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area </p>
 
@@ -21,22 +37,25 @@
 
   <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
 
-  <div>
+  <div class="site-one">
     <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img class="pic-container" src="images/jungle.png"> </a>
   </div>
 
-  <div>
+  <div class="site-two">
     <a href="https://github.com/Sanju3001/tweetr" target="_blank">  <img class="pic-container" src="images/tweeter.png"> </a>
   </div>
 
-  <div>
+  <div class="site-three">
     <a href="https://github.com/Sanju3001/resource_wall" target="_blank">  <img class="pic-container" src="images/resource-wall.png"> </a>
   </div>
 
-  <div>
+  <div class="site-four">
     <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img class="pic-container" src="images/chatty.png"> </a>
   </div>
 
+  <footer class="main-footer">The footer</footer>
+
+  </div>
 
 
 </body>
