--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
     </ul>
   </nav>
 
+  <div class="info">
+
   <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area </p>
 
   <p> I hold a degree in Electrical Engineering from Carleton University and a diploma in Web Development from Lighthouse Labs. I am passionate about all things web-related and enjoy analyzing problems for logical solutions. I am also a <b>strong</b> believer in the continous learning paradigm: the new labour market demands professionals who are continously acquiring new skills and abilities by means of self education. </p>
 
   <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
+
+  </div>
 
   <div class="site-one">
     <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img class="pic-container" src="images/jungle.png"> </a>
