--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
 
   </div>
 
-  <div class="site-one">
+  <ul class="listing">
+  <li>
+    <h2>Jungle Rails</h2>
+    <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
+    <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
+  </li>
+   <li>
+     <h2>Tweeter App</h2>
+     <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
+     <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
+   </li>
+   <li>
+     <h2>Resource Wall</h2>
+     <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
+     <div class="cta"> <a href=""> See Source Code </a> </div>
+    </li>
+    <li>
+     <h2>Chatty App</h2>
+     <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
+     <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
+    </li>
+</ul>
+
+
+ <!--  <div class="site-one">
     <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img class="pic-container" src="images/jungle.png"> </a>
   </div>
 
@@ -55,7 +79,7 @@
 
   <div class="site-four">
     <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img class="pic-container" src="images/chatty.png"> </a>
-  </div>
+  </div> -->
 
   <footer class="main-footer">The footer</footer>
 
