--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="wrapper">
 
-  <header class="main-head">Saj Bandara</header>
+  <header class="main-head"><h1>Saj Bandara</h1></header>
 
   <nav class="main-nav">
     <ul>
@@ -33,36 +33,36 @@
 
   <div class="info">
 
-  <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area </p>
+    <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area </p>
 
-  <p> I hold a degree in Electrical Engineering from Carleton University and a diploma in Web Development from Lighthouse Labs. I am passionate about all things web-related and enjoy analyzing problems for logical solutions. I am also a <b>strong</b> believer in the continous learning paradigm: the new labour market demands professionals who are continously acquiring new skills and abilities by means of self education. </p>
+    <p> I hold a degree in Electrical Engineering from Carleton University and a diploma in Web Development from Lighthouse Labs. I am passionate about all things web-related and enjoy analyzing problems for logical solutions. I am also a <b>strong</b> believer in the continous learning paradigm: the new labour market demands professionals who are continously acquiring new skills and abilities by means of self education. </p>
 
-  <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
+    <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
 
   </div>
 
   <ul class="listing">
-  <li>
-    <h2>Jungle Rails</h2>
-    <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
-    <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
-  </li>
-   <li>
-     <h2>Tweeter App</h2>
-     <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
-     <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
-   </li>
-   <li>
-     <h2>Resource Wall</h2>
-     <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
-     <div class="cta"> <a href=""> See Source Code </a> </div>
+    <li>
+      <h2>Jungle Rails</h2>
+      <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
+      <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
+    </li>
+    <li>
+      <h2>Tweeter App</h2>
+      <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
+      <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
+    </li>
+    <li>
+      <h2>Resource Wall</h2>
+      <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
+      <div class="cta"> <a href=""> See Source Code </a> </div>
     </li>
     <li>
      <h2>Chatty App</h2>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
     </li>
-</ul>
+  </ul>
 
 
  <!--  <div class="site-one">
