--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 
   <ul class="listing">
     <li>
-      <h2>Jungle Rails</h2>
+      <center><h2>Jungle Rails</h2></center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <h2>Tweeter App</h2>
+      <center><h2>Tweeter App</h2></center>
       <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <h2>Resource Wall</h2>
+      <center><h2>Resource Wall</h2></center>
       <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
       <div class="cta"> <a href=""> See Source Code </a> </div>
     </li>
     <li>
-     <h2>Chatty App</h2>
+     <center><h2>Chatty App</h2></center>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
     </li>
