--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="wrapper">
 
-  <header class="main-head"><h1>Saj Bandara</h1></header>
+  <header class="main-head"><center><h1>Saj Bandara</h1></center></header>
 
   <nav class="main-nav">
     <ul>
