--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta description content>
 
-  <link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet">
 
   <link href="/images/Sb.ico" rel="icon" type="image/x-icon">
 
