--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
   <nav class="main-nav">
     <ul>
-        <li><a href="">Nav 1</a></li>
-        <li><a href="">Nav 2</a></li>
-        <li><a href="">Nav 3</a></li>
+        <li><a href="https://github.com/Sanju3001">See Projects</a></li>
+        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc">See Resume</a></li>
+        <li><a href="mailto:codersaj@gmail.com?subject=Work%20Proposal">Contact Me</a></li>
     </ul>
   </nav>
 
@@ -81,7 +81,7 @@
     <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img class="pic-container" src="images/chatty.png"> </a>
   </div> -->
 
-  <footer class="main-footer">The footer</footer>
+  <footer class="main-footer"><center>Copyright 2017 Saj Bandara</center></footer>
 
   </div>
 
