--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <center><h2>Resource Wall</h2></center>
-      <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
-      <div class="cta"> <a href=""> See Source Code </a> </div>
+      <center><h2>CoC Member Site</h2></center>
+      <div class="body"> <img class="pic-container" src="images/clash.png"> </div>
+      <div class="cta"> <a href="https://roadgatorclan.wordpress.com/"> See Source Code </a> </div>
     </li>
     <li>
      <center><h2>Chatty App</h2></center>
