--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header class="main-head"><center><h1>Saj Bandara</h1></center></header>
 
   <nav class="main-nav">
-    <ul>
+    <ul class="nav-list">
         <li><a href="https://github.com/Sanju3001">See Projects</a></li>
         <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc">See Resume</a></li>
         <li><a href="mailto:codersaj@gmail.com?subject=Work%20Proposal">Contact Me</a></li>
@@ -43,22 +43,22 @@
 
   <ul class="listing">
     <li>
-      <center><h2>Jungle Rails</h2></center>
+      <center><h4>Jungle Rails</h4></center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <center><h2>Tweeter App</h2></center>
+      <center><h4>Tweeter App</h4></center>
       <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <center><h2>CoC Member Site</h2></center>
+      <center><h4>CoC Member Site</h4></center>
       <div class="body"> <img class="pic-container" src="images/clash.png"> </div>
       <div class="cta"> <a href="https://roadgatorclan.wordpress.com/"> See Source Code </a> </div>
     </li>
     <li>
-     <center><h2>Chatty App</h2></center>
+     <center><h4>Chatty App</h4></center>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
     </li>
