--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 
   <ul class="listing">
     <li>
-      <center><h4>Jungle Rails</h4></center>
+      <center><h5>Jungle Rails</h5></center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <center><h4>Tweeter App</h4></center>
+      <center><h5>Tweeter App</h5></center>
       <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <center><h4>CoC Member Site</h4></center>
+      <center><h5>CoC Fan Site</h5></center>
       <div class="body"> <img class="pic-container" src="images/clash.png"> </div>
       <div class="cta"> <a href="https://roadgatorclan.wordpress.com/"> See Source Code </a> </div>
     </li>
     <li>
-     <center><h4>Chatty App</h4></center>
+     <center><h5>Chatty App</h5></center>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
     </li>
