--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
 <body>
 
+<div id="particles-js"></div>
+
+<script src="./particles.js"></script>
+<script src="demo/js/app.js"></script>
+
 <div class="wrapper">
 
   <header class="main-head"><center><h1>Saj Bandara</h1></center></header>
