--- a/index.html
+++ b/index.html
@@ -19,26 +19,30 @@
 
 <body>
 
-<div id="particles-js"></div>
+<div id="particles-js">
+  <canvas class="particles-js-canvas-el" width="707" height="327" style="width: 100%; height: 100%; display: block; background: rgb(33,36,50); position: fixed; z-index:-1;"></canvas>
+</div>
 
 <script src="./particles.js"></script>
 <script src="demo/js/app.js"></script>
 
-<div class="wrapper">
 
-  <header class="main-head"><center><h1>Saj Bandara</h1></center></header>
+
+<div class="wrapper" style="position:absolute; overflow:hidden; opacity:0.6;">
+
+  <header class="main-head"><center><h1>Saj Bandaranayake</h1></center></header>
 
   <nav class="main-nav">
     <ul class="nav-list">
-        <li><a href="https://github.com/Sanju3001">See Projects</a></li>
-        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc">See Resume</a></li>
+        <li><a href="https://github.com/Sanju3001">My Projects</a></li>
+        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc">My Resume</a></li>
         <li><a href="mailto:codersaj@gmail.com?subject=Work%20Proposal">Contact Me</a></li>
     </ul>
   </nav>
 
   <div class="info">
 
-    <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area </p>
+    <p> Hi there! My name is Saj - I'm a web developer currently living and working in the Greater Toronto Area. </p>
 
     <p> I hold a degree in Electrical Engineering from Carleton University and a diploma in Web Development from Lighthouse Labs. I am passionate about all things web-related and enjoy analyzing problems for logical solutions. I am also a <b>strong</b> believer in the continous learning paradigm: the new labour market demands professionals who are continously acquiring new skills and abilities by means of self education. </p>
 
@@ -70,23 +74,9 @@
   </ul>
 
 
- <!--  <div class="site-one">
-    <a href="https://github.com/Sanju3001/jungle-rails" target="_blank">  <img class="pic-container" src="images/jungle.png"> </a>
-  </div>
 
-  <div class="site-two">
-    <a href="https://github.com/Sanju3001/tweetr" target="_blank">  <img class="pic-container" src="images/tweeter.png"> </a>
-  </div>
 
-  <div class="site-three">
-    <a href="https://github.com/Sanju3001/resource_wall" target="_blank">  <img class="pic-container" src="images/resource-wall.png"> </a>
-  </div>
-
-  <div class="site-four">
-    <a href="https://github.com/Sanju3001/chatty" target="_blank">  <img class="pic-container" src="images/chatty.png"> </a>
-  </div> -->
-
-  <footer class="main-footer"><center>Copyright 2017 Saj Bandara</center></footer>
+  <footer class="main-footer"><center><strong>&copy 2017 Saj Bandaranayake</strong></center></footer>
 
   </div>
 
