--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <div id="particles-js">
-  <canvas class="particles-js-canvas-el" width="707" height="327" style="width: 100%; height: 100%; display: block; background: rgb(33,36,50); position: fixed; z-index:-1;">
+  <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%; display: block; background: rgb(33,36,50); position: fixed; z-index:-1;">
 </div>
 
 <script src="./particles.js"></script>
