--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
 
 
-<div class="wrapper" style="position:absolute; overflow:hidden; opacity:0.6;">
+<div class="wrapper" style="position:absolute; overflow:hidden; opacity:0.8;">
 
   <header class="main-head"><center><h1>Saj Bandaranayake</h1></center></header>
 
   <nav class="main-nav">
     <ul class="nav-list">
-        <li><a href="https://github.com/Sanju3001">My Projects</a></li>
-        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc">My Resume</a></li>
+        <li><a href="https://github.com/Sanju3001" target="_blank">My Projects</a></li>
+        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc" target="_blank">My Resume</a></li>
         <li><a href="mailto:codersaj@gmail.com?subject=Work%20Proposal">Contact Me</a></li>
     </ul>
   </nav>
@@ -46,7 +46,11 @@
 
     <p> I hold a degree in Electrical Engineering from Carleton University and a diploma in Web Development from Lighthouse Labs. I am passionate about all things web-related and enjoy analyzing problems for logical solutions. I am also a <b>strong</b> believer in the continous learning paradigm: the new labour market demands professionals who are continously acquiring new skills and abilities by means of self education. </p>
 
-    <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
+    <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! Here's a map of my travels: </p>
+
+  <div class="travels">
+      <img class="travel-container" src="images/travels.png">
+  </div>
 
   </div>
 
@@ -64,7 +68,7 @@
     <li>
       <center><h5>CoC Fan Site</h5></center>
       <div class="body"> <img class="pic-container" src="images/clash.png"> </div>
-      <div class="cta"> <a href="https://roadgatorclan.wordpress.com/"> See Source Code </a> </div>
+      <div class="cta"> <a href="https://roadgatorclan.wordpress.com/" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
      <center><h5>Chatty App</h5></center>
