--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 
     <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! Here's a map of my travels: </p>
 
+  </div>
+
   <div class="travels">
       <img class="travel-container" src="images/travels.png">
   </div>
 
-  </div>
-
   <ul class="listing">
+    <center><p>Here are some of my projects:</p></center>
     <li>
       <center><h5>Jungle Rails</h5></center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
