--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
       <img class="travel-container" src="images/travels.png">
   </div>
 
+  <div><center><p>Here are some of my projects:</p></center></div>
+
   <ul class="listing">
-    <center><p>Here are some of my projects:</p></center>
+
     <li>
       <center><h5>Jungle Rails</h5></center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
