--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
       <img class="travel-container" src="images/travels.png">
   </div>
 
-  <div><center><p>Here are some of my projects:</p></center></div>
+  <div class="projects">
+    <center><p>Here are some of my projects:</p></center>
+  </div>
 
   <ul class="listing">
 
