--- a/index.html
+++ b/index.html
@@ -71,14 +71,18 @@
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
-      <center><h5>CoC Fan Site</h5></center>
-      <div class="body"> <img class="pic-container" src="images/clash.png"> </div>
-      <div class="cta"> <a href="https://roadgatorclan.wordpress.com/" target="_blank"> See Source Code </a> </div>
+      <center><h5>Resource Wall</h5></center>
+      <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
+      <div class="cta"> <a href="https://github.com/Sanju3001/resource_wall" target="_blank"> See Source Code </a> </div>
     </li>
     <li>
      <center><h5>Chatty App</h5></center>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
+    </li>
+     <li>
+      <center><h5>Coc Fan Site</h5></center>
+      <div class="body"> <img class="travel-container" src="images/clash.png"> </div>
     </li>
     <li>
       <center><h5>Map of my travels</h5></center>
