--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <meta description content>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600" rel="stylesheet">
 
   <link href="/images/Sb.ico" rel="icon" type="image/x-icon">
 
