added final project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600" rel="stylesheet">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
 
   <link href="/images/Sb.ico" rel="icon" type="image/x-icon">
 
@@ -35,9 +36,9 @@
 
   <nav class="main-nav">
     <ul class="nav-list">
-        <li><a href="https://github.com/Sanju3001" target="_blank">My Projects</a></li>
-        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc" target="_blank">My Resume</a></li>
-        <li><a href="mailto:codersaj@gmail.com?subject=Work%20Proposal">Contact Me</a></li>
+        <li><a href="https://github.com/Sanju3001" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> My Projects</a></li>
+        <li><a href="https://resume.creddle.io/resume/77hhkwvbbxc" target="_blank"><i class="fa fa-external-link-square" aria-hidden="true"></i> My Resume</a></li>
+        <li><a href="mailto:codersaj@gmail.com?subject=Work%20Proposal"><i class="fa fa-envelope" aria-hidden="true"></i> Contact Me</a></li>
     </ul>
   </nav>
 
@@ -61,31 +62,32 @@
 
   <ul class="listing">
 
-    <li>
+    <li class="racer">
+      <center><h5>BitRacer</h5></center>
+      <div class="body"> <img class="pic-container" src="images/race-1.png"> </div>
+      <div class="cta"> <a href="https://github.com/Sanju3001/bitracer" target="_blank"> See Source Code </a> </div>
+    </li>
+    <li class="other">
       <center><h5>Jungle Rails</h5></center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
     </li>
-    <li>
+    <li class="other">
       <center><h5>Tweeter App</h5></center>
       <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
-    <li>
+    <li class="other">
       <center><h5>Resource Wall</h5></center>
       <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/resource_wall" target="_blank"> See Source Code </a> </div>
     </li>
-    <li>
+    <li class="other">
      <center><h5>Chatty App</h5></center>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
     </li>
-     <li>
-      <center><h5>Coc Fan Site</h5></center>
-      <div class="body"> <img class="travel-container" src="images/clash.png"> </div>
-    </li>
-    <li>
+    <li class="racer">
       <center><h5>Map of my travels</h5></center>
       <div class="body"> <img class="travel-container" src="images/travels.png"> </div>
     </li>
