--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 
     <p> When I'm not working I enjoy reading, playing volleyball and travelling to far corners of our planet - I've been to 25 countries and counting! </p>
 
+    <p> Here are some of my projects: </p>
+
   </div>
 
  <!--  <div class="travels">
@@ -63,27 +65,42 @@
   <ul class="listing">
 
     <li class="racer">
-      <center><h5>BitRacer</h5></center>
+      <center>
+        <h5>BitRacer</h5>
+        <span class="small">A virtual racing game with simulated betting created with Phoenix, React & Postgres</span>
+      </center>
       <div class="body"> <img class="pic-container" src="images/race-1.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/bitracer" target="_blank"> See Source Code </a> </div>
     </li>
     <li class="other">
-      <center><h5>Jungle Rails</h5></center>
+      <center>
+        <h5>Jungle</h5>
+        <span class="small">An E-commerce app created with Rails, Bootstrap & Postgres</span>
+      </center>
       <div class="body"> <img class="pic-container" src="images/jungle.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/jungle-rails" target="_blank"> See Source Code </a> </div>
     </li>
     <li class="other">
-      <center><h5>Tweeter App</h5></center>
+      <center>
+        <h5>Tweeter</h5>
+        <span class="small">A Twitter-like app created with Node, Express & MongoDB</span>
+      </center>
       <div class="body"> <img class="pic-container" src="images/tweeter.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/tweetr" target="_blank"> See Source Code </a> </div>
     </li>
     <li class="other">
-      <center><h5>Resource Wall</h5></center>
+      <center>
+        <h5>Resource Wall</h5>
+        <span class="small">A pinterest-like app created with Node, Express & Postgres</span>
+      </center>
       <div class="body"> <img class="pic-container" src="images/resource-wall.png"> </div>
       <div class="cta"> <a href="https://github.com/Sanju3001/resource_wall" target="_blank"> See Source Code </a> </div>
     </li>
     <li class="other">
-     <center><h5>Chatty App</h5></center>
+     <center>
+      <h5>Chatty</h5>
+      <span class="small">A chat application created with React, Node & Express</span>
+    </center>
      <div class="body"> <img class="pic-container" src="images/chatty.png"> </div>
      <div class="cta"> <a href="https://github.com/Sanju3001/chatty" target="_blank"> See Source Code </a> </div>
     </li>
