--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 </head>
 
-<body>
+<body style="padding:0; margin:0;">
 
-<div id="particles-js" style="padding:0; margin:0;">
+<div id="particles-js">
   <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%; display: block; background: rgb(33,36,50); position: fixed; z-index:-1;">
 </div>
 
